--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,9 @@ dependencies {
 
     compile 'com.github.katoro:typekit:1.0.1'
     implementation 'com.android.support:cardview-v7:26.1.0'
+
+    compile 'com.google.firebase:firebase-messaging:11.8.0'
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
