--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,10 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
 
     compile 'com.google.firebase:firebase-messaging:11.8.0'
+
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.google.android.gms:play-services-location:11.8.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
